[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "yadism"
version = "0.0.0"
description = "Yet Another Deep-Inelastic Scattering Module"
authors = [
  "Alessandro Candido <alessandro.candido@mi.infn.it>",
  "Felix Hekhorn <felix.hekhorn@mi.infn.it>",
  "Giacomo Magni <gmagni@nikhef.nl>"
]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://n3pdf.github.io/yadism/"
repository = "https://github.com/N3PDF/yadism/"
documentation = "https://yadism.readthedocs.io/"
keywords = []
classifiers = [
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/N3PDF/yadism/issues"
"Coverage" = "https://codecov.io/gh/N3PDF/yadism"
"Changelog" = "https://github.com/N3PDF/yadism/releases"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.0"
scipy = "^1.7.0"
numba = "^0.53.1"
eko = "^0.7.1"
pandas = "^1.3.0"
rich = "^10.6.0"
LeProHQ = "^0.2.0"
# pineappl dependency
pineappl = {version = "0.5.0_beta.2", allow-prereleases = true, optional = true}
# docs dependencies (for readthedocs)
Sphinx = {version = "^4.1.1", optional = true}
sphinx-rtd-theme = {version = "^0.5.2", optional = true}
recommonmark = {version = "^0.7.1", optional = true}
sphinxcontrib-bibtex = {version = "^2.3.0", optional = true}
sphinxcontrib-details-directive = {version = "^0.1.0", optional = true}
nbsphinx = {version = "^0.8.6", optional = true}

[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"
# code review
black = "^21.6b0"
isort = "^5.9.2"
pylint = "^2.9.3"
# debug / explore
pdbpp = "^0.10.3"
ipython = "^7.28.0"
# test
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-env = "^0.6.2"
packutil = "^0.0.4"
# benchmark
yadmark = { path = "benchmarks/", develop = true }
asv = "^0.4.2"
# docs
Sphinx = "^4.1.1"
sphinx-rtd-theme = "^0.5.2"
recommonmark = "^0.7.1"
sphinxcontrib-bibtex = "^2.3.0"
sphinxcontrib-details-directive = "^0.1.0"
nbsphinx = "^0.8.6"

[tool.poetry.extras]
pineappl = ["pineappl"]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
  "recommonmark",
  "sphinxcontrib-bibtex",
  "sphinxcontrib-details-directive",
  "nbsphinx"
]

[tool.poe.tasks]
test = "pytest tests"
lint = "pylint src/*/*.py -E"
lint-warnings = "pylint src/*/*.py --exit-zero"
sandbox = "python benchmarks/runners/sandbox.py"
navigator = "navigator"
black = "black ."

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
dirty = true

[tool.poetry-dynamic-versioning.substitution]
files = ["src/yadism/__init__.py"]

[tool.pytest.ini_options]
#norecursedirs = benchmarks/aux
testpaths = ['tests/', 'benchmarks/runners/']
python_files = ['test_*.py', 'benchmark_*.py', 'regression.py']
python_classes = ['Test*', 'Benchmark*']
python_functions = ['test_*', 'benchmark_*']
addopts = [
  '--cov=yadism',
  '--cov-report=html',
  '--cov-report=xml',
  '--strict-markers',
]
markers = [
  'quick_check: marks test/benchmark for quick',
  'commit_check: marks test/benchmark to be run at each commit',
  'full: marks test/benchmark to be run only with the full-suite',
  'regression: marks regression tests',
  'eko: marks eko related tests (InterpolatorDispatcher)',
  'fonll: FONLL',
]
env = ["NUMBA_DISABLE_JIT=1"]

[tool.isort]
profile = "black"
