[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "yadmark"
version = "0.0.0"
description = "yadism benchmarks"
authors = ["Alessandro Candido <candido.ale@gmail.com>"]
include = ["banana.yaml"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
banana-hep = "^0.4.0"
sqlalchemy = "^1.4.21"
pandas = "^1.3.0"
lhapdf = { path = "lhapdf.so" }

# currently apfel and the other nonpip dependencies have to be installed
# manually into the environment
#
# yadism should be a dependency, but this would made it circular, since we want
# yadmark to be in the environment of yadism, thus we rely on this package
# being installed with yadism (since it is a dev-dependency) in this repo, and
# it will never be released on any public registry
# yadism = { path = "../" }
[tool.poetry.dev-dependencies]
black = "^21.6b0"

[tool.poetry.scripts]
navigator = "yadmark.navigator:launch_navigator"
