[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "yadmark"
version = "0.1.0"
description = "yadism benchmarks"
authors = [
  "Alessandro Candido <alessandro.candido@mi.infn.it>",
  "Felix Hekhorn <felix.hekhorn@mi.infn.it>",
  "Giacomo Magni <gmagni@nikhef.nl>"
]
include = ["banana.yaml"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
banana-hep = "^0.4.0"
sqlalchemy = "^1.4.21"
pandas = "^1.3.0"
# yadism should be a dependency, but this would made it circular, since we want
# yadmark to be in the environment of yadism, thus we rely on this package
# being installed with yadism (since it is a dev-dependency) in this repo, and
# it will never be released on any public registry
# yadism = { path = "../" }
a3b2bbc3ced97675ac3a71df45f55ba = "^6.4.0"

[tool.poetry.scripts]
navigator = "yadmark.navigator:launch_navigator"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
